--- a/home.html
+++ b/home.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo-info">
+            <img class="logo" src="cropped-bodin.png" alt="logo">
+            <p class="school_name">Bodindecha (Sing Singhaseni) school</p>
+        </div>
+        <div class="container">
+            <div class = "report">
+                <a href="report.html">Report</a>
+            </div>
+            <div class="contact">
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
