add home in home html

--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
             <p class="school_name">Bodindecha (Sing Singhaseni) school</p>
         </div>
         <div class="container">
+            <div class = "home">
+                <a href="home.html">Home</a>
+            </div>
             <div class = "report">
                 <a href="report.html">Report</a>
             </div>
