--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             <input type="text">
         </div>
         <div class ="but-log">
-            <button >Login <i class="fa-solid fa-play fa-xs" style="color: #ffffff;"></i></button>
+            <button >Login <i class="fa-solid fa-caret-right fa-sm" style="color: #ffffff;"></i></button>
         </div>
     </div>
 </body>
