--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             <p>Login</p>
         </div>
     </nav>
-    <div class = "login-path">
+    <div class = "login-part">
         <b><div class = "Welcome">Welcome !</div></b>
         <div class = "line"></div>
         <div class = "student-id">
