add icon evye and have bug

--- a/login.html
+++ b/login.html
@@ -27,11 +27,13 @@
         </div>
         <div class = "password">
             <div>Password</div>
-            <input type="text">
+            <input type="password" >
+            <i class="fa-solid fa-eye password-icon" style="color: #3a5f9c;"></i>
         </div>
         <div class ="but-log">
             <button >Login <i class="fa-solid fa-caret-right fa-sm" style="color: #ffffff;"></i></button>
         </div>
     </div>
+    <script src="login.js"></script>
 </body>
 </html>
