add some @media in login page

--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
         </div>
         <div class = "password">
             <div>Password</div>
-            <input type="password" >
-            <i class="fa-solid fa-eye password-icon" style="color: #3a5f9c;"></i>
+            <input type="password" id="password">
+            <i id = "eyepassword" class="fa-solid fa-eye password-icon" style="color: #3a5f9c;"></i>
         </div>
         <div class ="but-log">
             <button >Login <i class="fa-solid fa-caret-right fa-sm" style="color: #ffffff;"></i></button>
